# PythonTempalte

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  compose.yaml
src/: __init__.py  config.py  logger.py  main.py
src/infrastructure/db/: engine.py
tests/: test_main.py
