[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "python-template"
version = "0.4.0"
description = "Template repository for Python projects."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Radaev Kirill" }]
dependencies = [
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.18.4",
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[project.scripts]
app = "src.main:main"

[[tool.uv.index]]
name = "gitlab"
url = "https://gitlab.mars-saz.ru/api/v4/projects/60/packages/pypi/simple"
explicit = true
authenticate = "always"

[tool.uv.sources]
python-kafka-tools = { index = "gitlab" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
mypy_path = "src"
